002-traffic-routing/nginx-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    # version: v1
  name: nginx-test # chnaged the name to make it look generic
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http # NOTE: this should be given
  selector:
    app: nginx
    # version: v1 NOTE: remove this to make the service common
  type: ClusterIP
status:
  loadBalancer: {}
