002-traffic-routing/virtual-service-dark-launch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-test
  namespace: training
spec:
  hosts: # incoming hosts which this should be applied to this service
  - nginx-test.training.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-test.training.svc.cluster.local # host of the destination rule, should be same as service name
        subset: v1 # name of destination subset
    mirror:  
        host: nginx-test.training.svc.cluster.local # host of the destination rule, should be same as service name
        subset: v2
