002-traffic-routing/virtual-service-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-test
  namespace: training
spec:
  hosts: # incoming hosts which this should be applied to this service
  - nginx-test.training.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-test.training.svc.cluster.local # host of the destination rule, should be same as service name
        subset: v1
    match:
    - headers: # allows you to match multiple headers and do header based routing
        baggage-user-agent:
            regex: .*Safari.*
  - route: # if no matches found, go to next route
    - destination:
        host: nginx-test.training.svc.cluster.local # host of the destination rule, should be same as service name
        subset: v2 # name of destination subset
